# pytest_import_tutorial

./: pyproject.toml
src/: greet.py  greet_wrap.py
src/my_package/: greet.py
tests/: test_greet copy.py  test_greet.py
