[tool.poetry]
name = "my_package"
version = "0.1.0"
description = ""
authors = ["kokoro higuchi"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

